--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -103,7 +103,7 @@
                 <label>
                     <input type="checkbox" name="remember" checked="checked"> Remember Me
                 </label>
-                <a href="register" class="register-link">Register</a>
+                <a th:href="register" class="register-link">Register</a>
             </div>
             <button type="submit" class="submit-button">Login</button>
              <a href="changePass" class="change-password-link">Change Password</a> 
