--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -82,7 +82,7 @@
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" href="#">User Management</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item logout-item" href="#">Logout</a></li>
+                                <li><a class="dropdown-item logout-item" th:href="@{/logout}">Logout</a></li>
                             </ul>
                         </div>
                     </th:block>
