Create userManagement & back-end process

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -80,7 +80,7 @@
                             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userMenu">
                                 <li><a class="dropdown-item" th:href="@{/register}">User Registration</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#">User Management</a></li>
+                                <li><a class="dropdown-item" th:href="@{/userManagement}">User Management</a></li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item logout-item" th:href="@{/logout}">Logout</a></li>
                             </ul>
