Create forgot & reset password

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -101,7 +101,8 @@
                 </label>
             </div>
             <button type="submit" class="submit-button">Login</button>
-             <a href="changePass" class="change-password-link">Change Password</a> 
+             <a href="changePass" class="change-password-link">Change Password</a>
+             <a href="forgot-password" class="change-password-link">Forgot Password ?</a>              
         </form>
         <p class="error" th:text="${errMes}"></p>
         <p class="success" th:text="${okMess}"></p>
