--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -56,11 +56,12 @@
                             Products
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="productsDropdown">
-                            <li><a class="dropdown-item" href="#">Supplement</a></li>
+                            <li><a class="dropdown-item" th:href="@{/products/supplements}">Supplement</a></li>
+                            <li><a class="dropdown-item" th:href="@{/products/gears}">Gears</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" th:href="@{/cart}">
                             <i class="fas fa-shopping-cart"></i> Cart
                         </a>
                     </li>
@@ -78,10 +79,10 @@
                                 <i class="fas fa-user"></i> <span th:text="${username}"></span>
                             </button>
                             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userMenu">
-                                <li><a class="dropdown-item" th:href="@{/register}">User Registration</a></li>
+                                <li th:if="${role == 'ROLE_ADMIN'}"><a class="dropdown-item" th:href="@{/userManagement}">User Management</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" th:href="@{/userManagement}">User Management</a></li>
-                                <li><hr class="dropdown-divider"></li>
+                                <li th:if="${role == 'ROLE_ADMIN'}"><a class="dropdown-item" th:href="@{/products/productManagement}">Product Management</a></li>
+                                <li><hr class="dropdown-divider"></li>                                
                                 <li><a class="dropdown-item logout-item" th:href="@{/logout}">Logout</a></li>
                             </ul>
                         </div>
