--- a/src/main/resources/templates/supplements.html
+++ b/src/main/resources/templates/supplements.html
@@ -67,7 +67,7 @@
     </nav>
 
     <header class="container text-center mt-4">
-        <h1>Danh sách sản phẩm Supplement</h1>
+        <h1>Supplement list</h1>
     </header>
     
 	 <button class="btn btn-primary mb-3" onclick="location.href='/ComplexGym/home'">Back to Home</button>  
