--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,26 +5,52 @@
     <title>Login</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f2f5;
+            color: white;
+            font-family: 'Impact', Arial, sans-serif;
+            background: linear-gradient(45deg, black, rgb(28, 249, 139), black, rgb(227, 77, 2), black, rgb(83, 143, 241));
+            background-size: 300% 300%;
+            animation: color 12s ease-in-out infinite;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
             margin: 0;
+            background-clip: text;
         }
+
+        @keyframes color {
+            0% {
+                background-position: 0% 50%;
+            }
+
+            50% {
+                background-position: 100% 50%;
+            }
+
+            100% {
+                background-position: 0 50%;
+            }
+        }
+
         .login-container {
-            background-color: white;
+            background: rgba(0, 0, 0, 0.2);
+            backdrop-filter: saturate(180%) blur(2px);
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             width: 300px;
             box-sizing: border-box;
         }
+
         h2 {
             text-align: center;
-            color: #333;
+            text-shadow: black 10px;
+            color: rgba(255, 255, 255, 0.849);
+            letter-spacing: 2px;
+
+
         }
+
         input[type="text"],
         input[type="password"] {
             width: 100%;
@@ -34,33 +60,40 @@
             border-radius: 4px;
             box-sizing: border-box;
         }
+
         .checkbox-container {
             display: flex;
             justify-content: space-between;
             align-items: center;
         }
+
         .submit-button {
-            background-color: #4CAF50;
+            font-family: 'Impact', Haettenschweiler;
+            background-color: #23b8647a;
             color: white;
             border: none;
             padding: 10px;
-            border-radius: 4px;
+            border-radius: none;
             cursor: pointer;
             width: 100%;
             font-size: 16px;
             transition: background-color 0.3s;
         }
+
         .submit-button:hover {
-            background-color: #45a049;
+            background-color: #16ff9e;
         }
+
         .error {
-            color: red;
+            color: rgb(226, 67, 67);
             text-align: center;
         }
+
         .success {
-            color: blue;
+            color: rgb(18, 236, 149);
             text-align: center;
         }
+
         .toggle-password {
             cursor: pointer;
             position: absolute;
@@ -69,17 +102,20 @@
             transform: translateY(-50%);
             font-size: 18px;
         }
+
         .input-container {
             position: relative;
         }
+
         .change-password-link {
             display: block;
             text-align: left;
             margin-top: 10px;
             font-size: 14px;
-            color: blue; 
+            color: rgba(255, 255, 255, 0.758);
             text-decoration: none;
         }
+
         .change-password-link:hover {
             text-decoration: underline;
         }
